  CR: HTTP(S) - CGI: Update of the PHP preparation
  CR: HTTP(S) - CGI: Change of the option [P] to [D]
  CR: HTTP(S) - Directory Index: Optimization / reduction of code
      Generation of the file list in the Generator instead of the Worker.
  CR: Worker: Optimization / reduction of code
  CR: Remote: Optimization / reduction of code
  CR: Sources: Update of the comment format

5.2.0 20190502
  BF: HTTP(S) Correction
      - Basic Authentication / Digest Access Authentication: rules are used again case-insentive
  BF: Generator: Correction when rendering successive placeholders #[...]#[...]
  BF: HTTP(S) - Request: Optimization/correction for invalid requests/connections without data streams
  CR: Generator: Optimization / Review
      - Optimization: Handling of segments/scopes/fragements
        Improvement of dedicated and partial use
      - Omission of namespaces, replacement by the dedicated/partial use of segments
      - Change of syntax, omission of character ':' for segments   
        old: #[foo:[[...]]], new: #[foo[[...]]]
      - Enhancement by a deep/recursive processing of Hashtable + Collections  
      - Change of the parser/renderer:
        The template is initially prepared, the later addition of placeholders and/or
        segments is no longer supported.
  CR: HTTP(S) - AccessLog: Optimization
      - Change to a print formatted syntax
        date/time %t... variables %[...]
      - Change in default structure from filename to: <host>_<date>-access.log    
  CR: Project: Uniform use of ./LICENSE and ./CHANGES    
  CR: KeyStore: Change to use PKCS12
  
5.1.0 20180505
  BF: Initialize: Korrektur Smart-Modus
      - im Smart-Modus erstellte Sections werden wieder gehalten
  BF: Section: Korrektur Smart-Modus
      - im Smart-Modus angeforderte ungueltige Schluessel liefern wieder null
  CR: Projekt: Anpasung KeyStore
      - Entwicklung: Umstellung auf einen eigenen KeyStore unabhaengig vom Program(Release)-Verzeichnis