@@ -163,6 +163,7 @@ CR: HTTP(S) - Directory Index: Optimization / reduction of code
 CR: Worker: Optimization / reduction of code  
 CR: Remote: Optimization / reduction of code  
 CR: Sources: Update of the comment format  
+CR: XAPI: Integration of cascaded initialization  
 
 [Read more](https://raw.githubusercontent.com/seanox/devwex/master/CHANGES)
 
